2004-10-24 Alain Magloire
	Provide a context for ICDITarget.evaluateExpressionTtoString()
	* cdi/org/eclipse/cdt/debug/core/cdi/model/ICDITarget.java

2004-10-22 Mikhail Khodjaiants
	Fire the suspend event for the current thread on the target creation.
	* CDebugTarget.java

2004-10-21 Mikhail Khodjaiants
	Thread should handle CDI events from the corresponding CDI thread only.
	"canSuspend" should return true if the thread is stepping.
	New implementation of "stepReturn" for stack frames.
	* CThread.java
	* CStackFrame.java

2004-10-21 Mikhail Khodjaiants
	Pass the target state to threads on terminate, disconnect, resume, suspend and restart.
	* CoreModelMessages.properties
	* CDebugElement.java
	* CDebugTarget.java
	* CThread.java

2004-10-19 Mikhail Khodjaiants
	Set the initial state of a thread according to the state of the underlying CDI thread.
	* CThread.java

2004-10-19 Alain Magloire
	Fix NPE.
	* src/org/eclipse/cdt/debug/internal/core/DebugConfiguration.java

2004-10-19 Mikhail Khodjaiants
	Support of the thread-specific breakpoints. 
	Fix for the error handling of the asynchronous operations.
	* CBreakpointManager.java
	* CDebugTarget.java
	* CoreModelMessages.properties

2004-10-18 Alain Magloire
	Make ICDIRuntimeOptions be part of ICDITarget
	* cdi/org/eclipse/cdt/debug/core/cdi/ICDISession.java
	* cdi/org/eclipse/cdt/debug/core/cdi/model/ICDITarget.java
	* cdi/org/eclipse/cdt/debug/core/cdi/model/ICDIRuntimeOptions.java

2004-10-18 David Inglis
	Update to new ICDIDebugger interface deprecating old
	
	* src/org/eclipse/debug/core/CDebugModel.java
	* src/org/eclipse/debug/core/CDIDebugModel.java
	* src/org/eclipse/debug/core/ICDebugConfiguration.java 
	* src/org/eclipse/debug/core/ICDebugger.java
	* src/org/eclipse/debug/core/ICDIDebugger.java
	* src/org/eclipse/debug/core/ICDILaunchCOnfiguration.java
	* src/org/eclipse/debug/core/model/IExecFileInfo.java
	* src/org/eclipse/debug/internal/core/CBreakpointManager.java